--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,4 +12,7 @@ server {
     location /static/ {
         alias /home/app/web/static/;
     }
+    location /media/ {
+        alias /home/app/web/media/;
+    }
 }
