--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,25 @@ services:
       - ./app/:/usr/src/app/
     ports:
       - 8000:8000
-    env_file:
-      - ./.env.dev
+    environment:
+      - POSTGRES_ENGINE=django.db.backends.postgresql
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
     depends_on:
       - db
   db:
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.dev.db
+    environment:
+      - POSTGRES_ENGINE=django.db.backends.postgresql
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
 volumes:
   postgres_data:
